Fix margin spacing on login elements

--- a/source/style.css
+++ b/source/style.css
@@ -143,6 +143,10 @@ input {
     text-align: center;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
+
+.login_element {
+    margin: 5px;
+}
 /* END LOGIN ---------- ---------- ---------- ---------- */
 
 
